# novo_ged

./: .gitignore  README.md
api/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test_oracle_api.py
api/docker/postgres/: init.sql
api/migrations/: env.py  script.py.mako
api/src/: main.py  settings.py
api/src/application/documents/: document_use_cases.py  upload_document.py  view_document.py
api/src/application/legacy/: __init__.py  list_patient_documents.py
api/src/application/users/: user_use_cases.py
api/src/domain/audit/entities/: audit_log.py
api/src/domain/audit/repositories/: audit_repository.py
api/src/domain/documents/entities/: document.py
api/src/domain/documents/repositories/: document_repository.py
api/src/domain/users/entities/: user.py
api/src/domain/users/repositories/: user_repository.py
api/src/infrastructure/cache/: redis_cache.py
api/src/infrastructure/converters/: image_converter.py
api/src/infrastructure/database/oracle/: gemmius_repository.py  legacy_connection.py  legacy_document_repository.py
api/src/infrastructure/database/postgres/: connection.py
api/src/infrastructure/database/postgres/models/: audit_model.py  document_model.py  user_model.py
api/src/infrastructure/database/postgres/repositories/: pg_audit_repository.py  pg_document_repository.py  pg_user_repository.py
api/src/infrastructure/security/: encryption.py  jwt_service.py
api/src/infrastructure/storage/: cloud_storage_stub.py  ged_file_storage.py  interfaces.py  nfs_storage.py
api/src/presentation/api/v1/: router.py  users_audit_routers.py
api/src/presentation/api/v1/auth/: router.py
api/src/presentation/api/v1/documents/: router.py  upload_dev_router.py
api/src/presentation/api/v1/legacy/: __init__.py  router.py
api/src/presentation/dependencies/: auth_dependencies.py
api/src/presentation/middlewares/: logging_middleware.py
api/src/presentation/schemas/: schemas.py
api/tests/: conftest.py
api/tests/unit/application/: test_upload_document.py
api/tests/unit/domain/: test_document_entity.py
api/tests/unit/use_cases/: test_upload_document.py
frontend/: package-lock.json  (+1 more)
(+10 files in other folders)
