[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[project]
name = "ged-api"
version = "1.0.0"
description = "API de Gerenciamento Eletrônico de Documentos (GED)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",

    # Database - PostgreSQL (metadados)
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",

    # Database - Oracle 11g (legado)
    "oracledb>=2.2.1",

    # Cache & Session - Redis
    "redis[asyncio]>=5.0.4",

    # Auth & Segurança
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=42.0.0",

    # Configuração
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "email-validator>=2.1.0.post1",
    "python-dotenv>=1.0.1",

    # Upload de arquivos
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",

    # Processamento de imagens (JBIG2, JPG)
    "Pillow>=10.3.0",
    "pikepdf>=8.15.0",

    # Rate limiting
    "slowapi>=0.1.9",

    # Logging estruturado
    "structlog>=24.1.0",

    # HTTP Client (para testes de integração)
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "faker>=25.0.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
skip_empty = true
